added property list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description"
     content="Browse verified property listings. Find apartments, temp/houses, and more in your area." />
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -86,13 +89,13 @@
         <div class="card-grid">
           <article class="property-card">
             <div class="card-image">
-              <span class="badge">For Sale</span>
+              <span class="badge exo-2-regular">For Sale</span>
               <img src="temp/house1.png" alt="The Pinnacle at Highland Park">
             </div>
             <div class="card-info">
-              <h3 class="title">The Pinnacle at Highland Park</h3>
-              <div class="price">$3,56798.00</div>
-              <div class="features">
+              <h3 class="title exo-2-regular">The Pinnacle at Highland Park</h3>
+              <div class="price exo-2-regular">$3,56798.00</div>
+              <div class="features exo-2-regular">
                 <span>🛏️ 5 Bedrooms</span>
                 <span>•</span>
                 <span>🛁 2 Bathroom</span>
