--- a/index.html
+++ b/index.html
@@ -106,6 +106,106 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- popular section -->
+        <section class="popular section" id="popular">
+            <div class="container">
+                <span class="section__subtitle">
+                    Best Choice
+                </span>
+                <h2 class="section__title">
+                    Popular <span>residences.</span>
+                </h2>
+                <div class="popular__container swiper">
+                    <div class="swiper-wrapper">
+
+                        <article class="popular__card swiper-slide">
+                            <img class="popular__img" src="assets/img/popular1.jpg" alt="">
+                            <div class="popular__data">
+                                <h2 class="popular__price">
+                                    <span>$</span>69,000.0
+                                </h2>
+                                <h3 class="popular__title">
+                                    Garden City Assat
+                                </h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img class="popular__img" src="assets/img/popular2.jpg" alt="arrr">
+                            <div class="popular__data">
+                                <h2 class="popular__price">
+                                    <span>$</span>69,000.0
+                                </h2>
+                                <h3 class="popular__title">
+                                    Garden City Assat
+                                </h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img class="popular__img" src="assets/img/popular3.jpg" alt="">
+                            <div class="popular__data">
+                                <h2 class="popular__price">
+                                    <span>$</span>69,000.0
+                                </h2>
+                                <h3 class="popular__title">
+                                    Garden City Assat
+                                </h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img class="popular__img" src="assets/img/popular4.jpg" alt="">
+                            <div class="popular__data">
+                                <h2 class="popular__price">
+                                    <span>$</span>69,000.0
+                                </h2>
+                                <h3 class="popular__title">
+                                    Garden City Assat
+                                </h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol #9876
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="popular__card swiper-slide">
+                            <img class="popular__img" src="assets/img/popular5.jpg" alt="">
+                            <div class="popular__data">
+                                <h2 class="popular__price">
+                                    <span>$</span>69,000.0
+                                </h2>
+                                <h3 class="popular__title">
+                                    Garden City Assat
+                                </h3>
+                                <p class="popular__description">
+                                    Street The Garden City Of Miraflores, Lima - Perú Av. Sol #9876
+                                </p>
+                            </div>
+                        </article>
+
+                    </div>
+                    <div class="swiper-button-next">
+                        <i class='bx bxs-chevron-right'></i>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <i class='bx bxs-chevron-left'></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+      
           </body>
 </html>
 
