--- a/index.html
+++ b/index.html
@@ -209,6 +209,116 @@
           </body>
 </html>
 
+<section class="value section" id="value">
+            <div class="value__container container grid">
+                <div class="value__images">
+                    <div class="value__orbe">
+                        <div class="value__img">
+                            <img src="assets/img/value.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="value__content">
+                    <div class="value__data">
+                        <span class="section__subtitle">Our Value</span>
+                        <h2 class="section__title">Value We Give To <span>You.</span></h2>
+                        <p class="value__description">
+                            Lorem, ipsum dolor sit amet od?
+                            Lorem, ipsum dolor sit amet od?
+                            Lorem, ipsum dolor sit amet od?
+                        </p>
+                    </div>
+
+                    <div class="value__accordion">
+
+                        <div class="value__accordion-item">
+                            <header class="value__accordion-header">
+                                <i class='bx bx-shield value__accordion-icon'></i>
+                                <h3 class="value__accordion-title">
+                                    Best Interest rates on the market
+                                </h3>
+                                <div class="value__accordion-arrow">
+                                    <i class='bx bxs-down-arrow'></i>
+                                </div>
+                            </header>
+
+                            <div class="value__accordion-content">
+                                <p class="value__accordion-description">
+                                    Price we provide is lore Lorem ipsum, dolor sit
+                                    amet consectetur adipisicing elit. Consequatur
+                                    dolorem esse dignissimos
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="value__accordion-item">
+                            <header class="value__accordion-header">
+                                <i class='bx bx-shield value__accordion-icon'></i>
+                                <h3 class="value__accordion-title">
+                                    Best Interest rates on the market
+                                </h3>
+                                <div class="value__accordion-arrow">
+                                    <i class='bx bxs-down-arrow'></i>
+                                </div>
+                            </header>
+
+                            <div class="value__accordion-content">
+                                <p class="value__accordion-description">
+                                    Price we provide is lore Lorem ipsum, dolor sit
+                                    amet consectetur adipisicing elit. Consequatur
+                                    dolorem esse dignissimos
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="value__accordion-item">
+                            <header class="value__accordion-header">
+                                <i class='bx bx-shield value__accordion-icon'></i>
+                                <h3 class="value__accordion-title">
+                                    Best Interest rates on the market
+                                </h3>
+                                <div class="value__accordion-arrow">
+                                    <!-- <i class='bx bxs-down-arrow'></i> -->
+                                    <i class='bx bxs-down-arrow'></i>
+                                </div>
+                            </header>
+
+                            <div class="value__accordion-content">
+                                <p class="value__accordion-description">
+                                    Price we provide is lore Lorem ipsum, dolor sit
+                                    amet consectetur adipisicing elit. Consequatur
+                                    dolorem esse dignissimos
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="value__accordion-item">
+                            <header class="value__accordion-header">
+                                <i class='bx bx-shield value__accordion-icon'></i>
+                                <h3 class="value__accordion-title">
+                                    Best Interest rates on the market
+                                </h3>
+                                <div class="value__accordion-arrow">
+                                    <!-- <i class='bx bxs-down-arrow'></i> -->
+                                    <i class='bx bxs-down-arrow'></i>
+                                </div>
+                            </header>
+
+                            <div class="value__accordion-content">
+                                <p class="value__accordion-description">
+                                    Price we provide is lore Lorem ipsum, dolor sit
+                                    amet consectetur adipisicing elit. Consequatur
+                                    dolorem esse dignissimos
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
     <!-- <main class="main-content">
       <section class="properties-section">
         <div class="section-header">
