--- a/index.html
+++ b/index.html
@@ -319,6 +319,104 @@
 
             </div>
         </section>
+        <!-- contact secion -->
+         <section class="contact section" id="contact">
+            <div class="contact__container container grid">
+                <div class="contact__images">
+                    <div class="contact__orbe">
+
+                    </div>
+
+                    <div class="contact__img">
+                        <img src="assets/img/contact.png" alt="">
+                    </div>
+                </div>
+
+                <div class="contact__content">
+                    <div class="contact__data">
+                        <span class="section__subtitle">Contact Us</span>
+                        <h2 class="section__title">
+                            Easy to Contact <span>Us.</span>
+                        </h2>
+                        <p class="contact__description">
+                            If you liked this website please contact at Lorem ipsum dolor sit amet.
+                        </p>
+                    </div>
+
+                    <div class="contact__card">
+                        <div class="contact__card-box">
+                            <div class="contact__card-info">
+                                <i class='bx bxs-phone-incoming'></i>
+                                <div>
+                                    <h3 class="contact__card-title">
+                                        Phone Number
+                                    </h3>
+
+                                    <p class="contact__card-description">
+                                        Lorem ipsum dolor sit.
+                                    </p>
+                                </div>
+                            </div>
+                            <button class="contact__card-button popup-enabled">
+                                Button
+                            </button>
+                        </div>
+                        <div class="contact__card-box">
+                            <div class="contact__card-info">
+                                <i class='bx bxs-bell'></i>
+                                <div>
+                                    <h3 class="contact__card-title">
+                                        Email
+                                    </h3>
+
+                                    <p class="contact__card-description">
+                                        Lorem ipsum dolor sit amet, consectetur.
+                                    </p>
+                                </div>
+                            </div>
+                            <button class="contact__card-button popup-enabled">
+                                Button
+                            </button>
+                        </div>
+                        <div class="contact__card-box">
+                            <div class="contact__card-info">
+                                <i class='bx bx-envelope'></i>
+                        <div>
+                                    <h3 class="contact__card-title">
+                                        Land Line
+                                    </h3>
+
+                                    <p class="contact__card-description">
+                                        Accusantium qui in repudiandae unde
+                                    </p>
+                                </div>
+                            </div>
+                            <button class="contact__card-button popup-enabled">
+                                Button
+                            </button>
+                        </div>
+                        <div class="contact__card-box">
+                            <div class="contact__card-info">
+                                <i class='bx bxs-phone'></i>
+                                <div>
+                                    <h3 class="contact__card-title">
+                                        Other
+                                    </h3>
+
+                                    <p class="contact__card-description">
+                                        Accusantium qui in repudiandae unde
+                                    </p>
+                                </div>
+                            </div>
+                            <button class="contact__card-button popup-enabled">
+                                Button
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     <!-- <main class="main-content">
       <section class="properties-section">
         <div class="section-header">
