Complete main content section

--- a/index.html
+++ b/index.html
@@ -417,6 +417,23 @@
             </div>
         </section>
 
+        <section class="subscribe section">
+            <div class="subscribe__container container">
+                <h1 class="subscribe__title">
+                    Get Started with Us
+                </h1>
+                <p class="subscribe__description">
+                    Embark on your real estate journey with us. Whether you're looking to buy, sell, or invest, our team
+                    of experts is here to guide you every step of the way. Discover your dream property, explore our
+                    services, and experience a seamless real estate experience like never before. </p>
+                <a href="#" class="button subscribe__button popup-enabled">
+                    Get started
+                </a>
+
+            </div>
+        </section>
+    </main>
+
     <!-- <main class="main-content">
       <section class="properties-section">
         <div class="section-header">
