Add header navigation CSS

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>RealEstra — Find Your Dream Home</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+    <link rel="stylesheet" href="assets/css/styles.css">
+
+    <title>Responsive Real Estate Website - HTML CSS JAVASCRIPT</title>
+</head>
 
   <body class="">
     <header class="header" id="header">
@@ -50,7 +58,6 @@
     </header>
 
     <main class="main">
-        <!-- home section -->
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div class="home_data">
@@ -108,7 +115,6 @@
         </section>
 
 
-        <!-- popular section -->
         <section class="popular section" id="popular">
             <div class="container">
                 <span class="section__subtitle">
@@ -206,7 +212,6 @@
             </div>
         </section>
       
-       <!-- value section -->
         <section class="value section" id="value">
             <div class="value__container container grid">
                 <div class="value__images">
