--- a/index.html
+++ b/index.html
@@ -538,6 +538,18 @@
         </div>
 
     </footer>
+    
+    <a href="" class="scrollup" id="scroll-up">
+        <i class='bx bxs-chevrons-up'></i>
+    </a>
+
+    <script src=""></script>
+
+    <script src="assets/js/swiper-bundle.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+    <script src="assets/js/main.js"></script>
                
   </body>
 </html>
