Add property images and made small changes

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                   alt=""
                 />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>$</span>69,000.0</h2>
-                  <h3 class="popular__title">Kopshti i Qytetit</h3>
+                  <h2 class="popular__price"><span>€</span>69,000.0</h2>
+                  <h3 class="popular__title">Rezidenca Arbëria</h3>
                   <p class="popular__description">
-                    Rruga "Lulëzimi", Lagjja e Re, Tiranë - Shqipëri. Nr. 123
+                    Rruga Ahmet Krasniqi, Lagjia Arbëria, Prishtinë. Vila B2, Nr. 08
                   </p>
                 </div>
               </article>
@@ -150,10 +150,10 @@
                   alt=""
                 />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>$</span>85,000.0</h2>
-                  <h3 class="popular__title">Rezidenca Panorama</h3>
+                  <h2 class="popular__price"><span>€</span>85,000.0</h2>
+                  <h3 class="popular__title">Kompleksi i Ri - Emshir</h3>
                   <p class="popular__description">
-                    Bulevardi Kryesor, Prishtinë - Kosovë. Kati 5, Nr. 45
+                    Rruga Rexhep Krasniqi, Lagjia Emshir, Prishtinë. Blloku C1, Nr. 14
                   </p>
                 </div>
               </article>
@@ -165,10 +165,10 @@
                   alt=""
                 />
                 <div class="popular__data">
-                  <h2 class="popular__price"><span>$</span>120,000.0</h2>
-                  <h3 class="popular__title">Vilat e Bregdetit</h3>
+                  <h2 class="popular__price"><span>€</span>120,000.0</h2>
+                  <h3 class="popular__title">Bregu i Diellit</h3>
                   <p class="popular__description">
-                    Rruga Detare, Vlorë - Shqipëri. Zona A, Vila 12
+                    Rruga Enver Maloku, Bregu i Diellit, Prishtinë. Blloku Lindor, Nr. 4
                   </p>
                 </div>
               </article>
@@ -189,7 +189,7 @@
           <div class="value__images">
             <div class="value__orbe">
               <div class="value__img">
-                <img src="assets/img/value.jpg" alt="Vlera jonë" />
+                <img src="assets/img/pic2.jpg" alt="Vlera jonë" />
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
           <div class="contact__images">
             <div class="contact__orbe"></div>
             <div class="contact__img">
-              <img src="assets/img/contact.png" alt="Na kontaktoni" />
+              <img src="assets/img/pic3.jpg" alt="Na kontaktoni" />
             </div>
           </div>
 
