Update social media links in footer

--- a/index.html
+++ b/index.html
@@ -426,16 +426,16 @@
       <div class="social">
         <h3 class="footer__title">Na ndiqni</h3>
         <ul class="footer__social">
-          <a href="" class="footer__social-link popup-enabled" target="_blank"
+          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
             ><i class="bx bxl-twitter"></i
           ></a>
-          <a href="" class="footer__social-link popup-enabled" target="_blank"
+          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
             ><i class="bx bxl-facebook-circle"></i
           ></a>
-          <a href="" class="footer__social-link popup-enabled" target="_blank"
+          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
             ><i class="bx bxl-pinterest"></i
           ></a>
-          <a href="" class="footer__social-link popup-enabled" target="_blank"
+          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
             ><i class="bx bxl-instagram-alt"></i
           ></a>
         </ul>
