Update button behavior and html content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body class="">
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="" class="nav__logo">H&SH<i class="bx bxs-buildings"></i></a>
+        <a href="" class="nav__logo">H&PR<i class="bx bxs-buildings"></i></a>
 
         <div class="nav__menu">
           <ul class="nav__list">
@@ -138,7 +138,8 @@
                   <h2 class="popular__price"><span>€</span>69,000.0</h2>
                   <h3 class="popular__title">Rezidenca Arbëria</h3>
                   <p class="popular__description">
-                    Rruga Ahmet Krasniqi, Lagjia Arbëria, Prishtinë. Vila B2, Nr. 08
+                    Rruga Ahmet Krasniqi, Lagjia Arbëria, Prishtinë. Vila B2,
+                    Nr. 08
                   </p>
                 </div>
               </article>
@@ -153,7 +154,8 @@
                   <h2 class="popular__price"><span>€</span>85,000.0</h2>
                   <h3 class="popular__title">Kompleksi i Ri - Emshir</h3>
                   <p class="popular__description">
-                    Rruga Rexhep Krasniqi, Lagjia Emshir, Prishtinë. Blloku C1, Nr. 14
+                    Rruga Rexhep Krasniqi, Lagjia Emshir, Prishtinë. Blloku C1,
+                    Nr. 14
                   </p>
                 </div>
               </article>
@@ -168,7 +170,8 @@
                   <h2 class="popular__price"><span>€</span>120,000.0</h2>
                   <h3 class="popular__title">Bregu i Diellit</h3>
                   <p class="popular__description">
-                    Rruga Enver Maloku, Bregu i Diellit, Prishtinë. Blloku Lindor, Nr. 4
+                    Rruga Enver Maloku, Bregu i Diellit, Prishtinë. Blloku
+                    Lindor, Nr. 4
                   </p>
                 </div>
               </article>
@@ -300,7 +303,10 @@
                     <p class="contact__card-description">+383 45 555 555</p>
                   </div>
                 </div>
-                <button class="contact__card-button popup-enabled">
+                <button
+                  style="cursor: pointer"
+                  class="contact__card-button popup-enabled"
+                >
                   Telefono Tani
                 </button>
               </div>
@@ -315,7 +321,10 @@
                     </p>
                   </div>
                 </div>
-                <button class="contact__card-button popup-enabled">
+                <button
+                  style="cursor: pointer"
+                  class="contact__card-button popup-enabled"
+                >
                   Dërgo Mesazh
                 </button>
               </div>
@@ -328,7 +337,12 @@
                     <p class="contact__card-description">Qendra, Prishtinë</p>
                   </div>
                 </div>
-                <button class="contact__card-button popup-enabled">
+                <button
+                  style="cursor: pointer"
+                  class="contact__card-button popup-enabled"
+                  onclick="window.open('https://www.google.com/maps/place/The+Faculty+of+Mathematics+and+Natural+Sciences/@42.6554946,21.1609659,16.78z/data=!4m10!1m2!2m1!1sfshmn+location!3m6!1s0x13549ee896b552d7:0x31bf5e925cb705a3!8m2!3d42.6555491!4d21.1613269!15sCg5mc2htbiBsb2NhdGlvbpIBFXVuaXZlcnNpdHlfZGVwYXJ0bWVudOABAA!16s%2Fg%2F1hdyyllp2?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D','_blank');"
+                  aria-label="Open location in Google Maps (new tab)"
+                >
                   Hap Hartën
                 </button>
               </div>
@@ -341,7 +355,10 @@
                     <p class="contact__card-description">WhatsApp / Viber</p>
                   </div>
                 </div>
-                <button class="contact__card-button popup-enabled">
+                <button
+                  style="cursor: pointer"
+                  class="contact__card-button popup-enabled"
+                >
                   Fillo Chat
                 </button>
               </div>
@@ -426,16 +443,28 @@
       <div class="social">
         <h3 class="footer__title">Na ndiqni</h3>
         <ul class="footer__social">
-          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
+          <a
+            href="https://fshmn.uni-pr.edu/"
+            class="footer__social-link popup-enabled"
+            target="_blank"
             ><i class="bx bxl-twitter"></i
           ></a>
-          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
+          <a
+            href="https://fshmn.uni-pr.edu/"
+            class="footer__social-link popup-enabled"
+            target="_blank"
             ><i class="bx bxl-facebook-circle"></i
           ></a>
-          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
+          <a
+            href="https://fshmn.uni-pr.edu/"
+            class="footer__social-link popup-enabled"
+            target="_blank"
             ><i class="bx bxl-pinterest"></i
           ></a>
-          <a href="https://fshmn.uni-pr.edu/" class="footer__social-link popup-enabled" target="_blank"
+          <a
+            href="https://fshmn.uni-pr.edu/"
+            class="footer__social-link popup-enabled"
+            target="_blank"
             ><i class="bx bxl-instagram-alt"></i
           ></a>
         </ul>
@@ -444,7 +473,7 @@
       <div class="footer__info container">
         <span class="footer__copy">
           Të gjitha të drejtat e rezervuara
-          <i class="bx bxs-copyright"></i> H&SH Real Estate.
+          <i class="bx bxs-copyright"></i> H&PR Real Estate.
         </span>
 
         <div class="footer__privacy">
