--- a/index.html
+++ b/index.html
@@ -656,13 +656,14 @@
               <!-- iframe for YouTube video - compact -->
               <div class="media__youtube-compact">
                 <h3>Video YouTube</h3>
+                <div class="video-container">
                 <iframe
-                  src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                  title="Video për Real Estate"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                ></iframe>
+                src="https://www.youtube.com/embed/lpzEd8gpWVM"
+                title="Video për Real Estate"
+                allowfullscreen>
+                  </iframe>
+                    </div>
+
               </div>
             </div>
           </div>
